--- a/package.json
+++ b/package.json
@@ -8,21 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@types/axios": "^0.14.0",
+    "add": "^2.0.6",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
+    "moment": "^2.24.0",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-elements": "^1.2.7",
+    "react-native-calendars": "^1.265.0",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-router-native": "^5.1.2",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/axios": "^0.14.0",
+    "@types/moment": "^2.13.0",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
+    "@types/react-native-calendars": "^1.20.7",
+    "@types/react-router-native": "^5.1.0",
     "babel-preset-expo": "~8.1.0",
     "typescript": "~3.8.3"
   },
