--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.2.8",
+    "@react-navigation/native": "^5.1.7",
+    "@react-navigation/stack": "^5.2.14",
     "add": "^2.0.6",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
@@ -18,9 +22,12 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.265.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "react-router-native": "^5.1.2",
+    "react-navigation": "^4.3.8",
+    "react-navigation-stack": "^2.3.13",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
